Replace logo image with magveto-logo.jpg

--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
         <header>
             <div class="logo-container">
                 <!-- A logó kép helye -->
-                <img src="images/logo.jpg" alt="KVANTUM SZÖVETSÉG" class="logo-image">
+                <img src="images/magveto-logo.jpg" alt="KVANTUM SZÖVETSÉG" class="logo-image">
                 <h1 class="logo">Magvető</h1>
                 <p class="subtitle">A Belső Kastély Útja - Ahol a magok csendje szól</p>
             </div>
